[package]
name = "template-generation"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet = { path = "../../sdk/rust/inferlet" }
jsonschema = { version = "0.45", default-features = false }
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
serde_json = "1.0"

[profile.release]
lto = true
