[package]
name = "inferlet"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Inferlet support library for Pie"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"
keywords = ["wasi", "wasm", "pie", "inferlet"]
categories = ["wasm"]

[dependencies]
wit-bindgen = "0.46.0"
wstd = "0.5.6"
trait-variant = "0.1.2"
wasi = "0.14.7"
inferlet-macros = { version = "0.1.0", path = "../inferlet-macros" }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
pico-args = "0.5"
